# project_structured

./: README.md  pyproject.toml
.github/workflow/: ci.yml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/output/: output.xlsx
tests/: test_pipeline.py
