[tool.poetry]
name = "workshop-estrutura"
version = "0.1.0"
description = "my etl project"
authors = ["Paulo Aguiar <aguiarlapaulo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.1"
isort = "^5.12.0"
blue = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskpy.tasks]
format = "isort . && blue ."